Fix for misaligned Pause button. (#308)

--- a/app/scss/partials/_pause_button.scss
+++ b/app/scss/partials/_pause_button.scss
@@ -41,16 +41,14 @@
 	.button-pause {
 		min-width: 125px;
 		max-width: 125px;
-		line-height: 17px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		line-height: 16px;
 		.pause-button-text {
-			overflow: hidden;
+			overflow-x: hidden;
 			text-overflow: clip;
 			font-size: 11px;
 		}
 		.pause-button-icon {
+			height: 13px;
 			padding: 0 10px 0 30px;
 			background-repeat: no-repeat;
 			background-position: 0 center;
@@ -71,7 +69,6 @@
 			min-width: 41px;
 			max-width: 41px;
 			padding-left: 17px;
-			display: inline-block;
 			.pause-button-icon {
 				padding: 0 0 0 15px;
 			}
@@ -153,13 +150,6 @@
 }
 
 .ghostery-features-container .sub-component.pause-button {
-	.button-group {
-		display: flex;
-		&.simple-view {
-			position: relative;
-			top: 19px;
-		}
-	}
 	.button-pause {
 		height: 35px;
 		line-height: 16px;
@@ -204,9 +194,6 @@
 	.dropdown {
 		position: absolute;
 		z-index: 1;
-	}
-	.dropdown-container.simple-view {
-		top: 19px;
 	}
 	.dropdown-container.centered .dropdown-item {
 		padding: 9px 0;
